fix navbar button collapsing issue

--- a/app/assets/stylesheets/carted_dishes.scss
+++ b/app/assets/stylesheets/carted_dishes.scss
@@ -2,14 +2,24 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+$green: #009f34;
+$blue: #292d45;
+
 .cartContainer {
-	margin-top: 150px;
+	margin: 150px auto;
+	text-align: center;
+	color: $green;
+
+	h1 {
+		font-size: 54px;
+	}
 }
 
 .cartTable {
 	width: 80%;
 	margin: 20px 10%;
 	font-size: 16px;
+	color: $blue;
 }
 
 .cartTable th, .cartTable tr, .cartTable td {
