--- a/app/assets/stylesheets/dishes.scss
+++ b/app/assets/stylesheets/dishes.scss
@@ -11,6 +11,7 @@ body {
 
 .quantityField {
 	width: 40px;
+	text-align: center;
 }
 
 .addToCartBtn {
