--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$green: #009f34;
+$blue: #292d45;
+
+.orderInfoDiv {
+	text-align: center;
+	color: $blue;
+}
